Fixed layout issue on mobile

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -248,7 +248,7 @@ table.table {
     right: 0;
     left: 0;
     bottom: 0;
-    padding-top: 0;
+    //padding-top: 0;
   }
 
   .header {
